# highlight

./: .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  highlight.cabal  stack.yaml
.github/workflows/: ci.yml
app/highlight/: Main.hs
app/hrep/: Main.hs
bench/: Bench.hs
src/: Highlight.hs
src/Highlight/: Color.hs  Error.hs  Highlight.hs  Hrep.hs  Monad.hs  Options.hs  Pipes.hs  Run.hs  Util.hs
src/Highlight/Common/: Color.hs  Error.hs  Monad.hs  Options.hs  Pipes.hs  Util.hs
src/Highlight/Common/Monad/: Input.hs  Output.hs
src/Highlight/Highlight/: Monad.hs  Options.hs  Run.hs
src/Highlight/Hrep/: Monad.hs  Options.hs  Run.hs
test/: Test.hs
test/Test/: Golden.hs
test/golden/golden-files/highlight/: from-grep.stdout  multi-file.stderr  multi-file.stdout  single-file.stdout
test/golden/golden-files/hrep/: from-stdin.stdout  multi-file.stdout  single-file.stdout
test/golden/test-files/: file1  file2  from-grep
test/golden/test-files/dir1/: file3  file4
test/golden/test-files/dir1/subdir1/: file5
test/golden/test-files/dir2/: file6
