name:                highlight
version:             2.0.0.0
synopsis:            pretty printer for data types with a 'Show' instance.
description:         Please see <https://github.com/cdepillabout/highlight#readme README.md>.
homepage:            https://github.com/cdepillabout/highlight
license:             BSD3
license-file:        LICENSE
author:              Dennis Gosnell
maintainer:          cdep.illabout@gmail.com
copyright:           2017 Dennis Gosnell
category:            Text
build-type:          Simple
extra-source-files:  README.md
                   , img/highlight-example-screenshot.png
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Highlight
                     , Highlight.Color
                     , Highlight.Error
                     , Highlight.Options
                     , Highlight.Monad
                     , Highlight.Pipes
                     , Highlight.Run
                     , Highlight.Util
  build-depends:       base >= 4.8 && < 5
                     , ansi-terminal >= 0.6
                     , bytestring >= 0.10
                     , containers >= 0.5
                     , filepath >= 1
                     , mtl >= 2.2
                     , optparse-applicative >= 0.11
                     , pipes >= 4
                     , pipes-bytestring >= 2
                     , pipes-group >= 1
                     , pipes-safe >= 2
                     , regex >= 1.0
                     , regex-with-pcre >= 1.0
                     , system-filepath >= 0.4
                     , text >= 1.2
                     , transformers >= 0.4
  if os(windows)
    Build-Depends:     Win32 >= 2.0
  else
    Build-Depends:     unix >= 2.0

  default-language:    Haskell2010
  ghc-options:         -Wall
  other-extensions:    TemplateHaskell

executable highlight
  main-is:             Main.hs
  hs-source-dirs:      app/highlight
  build-depends:       base
                     , highlight
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite highlight-doctest
  type:                exitcode-stdio-1.0
  main-is:             DocTest.hs
  hs-source-dirs:      test
  build-depends:       base
                     , doctest
                     , Glob
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

benchmark highlight-bench
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  hs-source-dirs:      bench
  build-depends:       base
                     , criterion
                     , highlight
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: git@github.com:cdepillabout/highlight.git
